--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=backend
-spring.datasource.url=jdbc:mysql://localhost:3308/pruebas_java
+spring.datasource.url=jdbc:mysql://localhost:3306/mysql_test
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
